<resources>
    <string name="app_name">User Register</string>
    <string name="tv_name">Name</string>
    <string name="et_name">Enter your name</string>
    <string name="tv_username">Username</string>
    <string name="et_username">Enter your username</string>
    <string name="tv_email">Email</string>
    <string name="et_email">Enter your email</string>
    <string name="tv_password">Password</string>
    <string name="et_password">Enter your password</string>
    <string name="btn_register">Register</string>
</resources>