<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_below="@+id/tv_title"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/tv_name"
        android:hint="@string/et_name"
        android:minHeight="48dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_username"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/tv_name"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/tv_username"
        android:hint="@string/et_username"
        android:minHeight="48dp"
        android:inputType="text"
        android:autofillHints="username"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/tv_username"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/tv_email"
        android:hint="@string/et_email"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/tv_email"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/tv_password"
        android:hint="@string/et_password"
        android:minHeight="48dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:maxWidth="240dp"
        android:padding="10dp"
        android:text="@string/btn_register"
        android:textSize="16sp" />
</RelativeLayout>